// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should run arethetypeswrong as expected 1`] = `
[
  "[arethetypeswrong] test-npm v0.0.0

 No problems found 🌟
┌───────────────────┬────────────┐
│                   │ "test-npm" │
├───────────────────┼────────────┤
│ node10            │ 🟢         │
├───────────────────┼────────────┤
│ node16 (from CJS) │ 🟢 (CJS)   │
├───────────────────┼────────────┤
│ node16 (from ESM) │ 🟢 (CJS)   │
├───────────────────┼────────────┤
│ bundler           │ 🟢         │
└───────────────────┴────────────┘",
]
`;

exports[`should run arethetypeswrong without emoji 1`] = `
[
  "[arethetypeswrong] test-npm v0.0.0

 No problems found
┌───────────────────┬────────────┐
│                   │ "test-npm" │
├───────────────────┼────────────┤
│ node10            │ OK         │
├───────────────────┼────────────┤
│ node16 (from CJS) │ OK (CJS)   │
├───────────────────┼────────────┤
│ node16 (from ESM) │ OK (CJS)   │
├───────────────────┼────────────┤
│ bundler           │ OK         │
└───────────────────┴────────────┘",
]
`;

exports[`should run arethetypeswrong without summary 1`] = `
[
  "[arethetypeswrong] test-npm v0.0.0

┌───────────────────┬────────────┐
│                   │ "test-npm" │
├───────────────────┼────────────┤
│ node10            │ OK         │
├───────────────────┼────────────┤
│ node16 (from CJS) │ OK (CJS)   │
├───────────────────┼────────────┤
│ node16 (from ESM) │ OK (CJS)   │
├───────────────────┼────────────┤
│ bundler           │ OK         │
└───────────────────┴────────────┘",
]
`;
